Swagger and dead code cleanup
